@@ -2039,14 +2039,6 @@ void QWebPage::updatePositionDependentActions(const QPoint &pos)
 */
 
 /*!
-    \class QWebPage::ExtensionOption
-    \since 4.4
-    \brief The ExtensionOption class provides an extended input argument to QWebPage's extension support.
-
-    \sa QWebPage::extension()
-*/
-
-/*!
     \class QWebPage::ChooseMultipleFilesExtensionOption
     \since 4.5
     \brief The ChooseMultipleFilesExtensionOption class describes the option
@@ -2077,6 +2069,8 @@ void QWebPage::updatePositionDependentActions(const QPoint &pos)
     The behavior of this function is determined by \a extension.
 
     You can call supportsExtension() to check if an extension is supported by the page.
+
+    Returns true if the extension was called successfully; otherwise returns false.
 
     \sa supportsExtension(), Extension
 */
@@ -2519,7 +2513,7 @@ quint64 QWebPage::bytesReceived() const {
     This signal is emitted whenever the text in form elements changes
     as well as other editable content.
 
-    \sa contentEditable(), QWebFrame::toHtml(), QWebFrame::toPlainText()
+    \sa contentEditable, QWebFrame::toHtml(), QWebFrame::toPlainText()
 */
 
 /*!
@@ -2641,7 +2635,10 @@ quint64 QWebPage::bytesReceived() const {
   \fn void QWebPage::saveFrameStateRequested(QWebFrame* frame, QWebHistoryItem* item);
 
   This signal is emitted shortly before the history of navigated pages
-  is changed, for example when navigating back in the history.
+  in \a frame is changed, for example when navigating back in the history.
+
+  The provided QWebHistoryItem, \a item, holds the history entry of the frame before
+  the change.
 
   A potential use-case for this signal is to store custom data in
   the QWebHistoryItem associated to the frame, using QWebHistoryItem::setUserData().
@@ -2651,7 +2648,7 @@ quint64 QWebPage::bytesReceived() const {
   \since 4.5
   \fn void QWebPage::restoreFrameStateRequested(QWebFrame* frame);
 
-  This signal is emitted when the load is finished and the application may now update its state accordingly.
+  This signal is emitted when the load of \a frame is finished and the application may now update its state accordingly.
 */
 
 
